force-app/main/default/objects/Product__c/Product__c.object-meta.xml
<CustomObject>
    <label>Product.</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Products.</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>