force-app/main/default/objects/Product__c/fields/Enable_Inventory_management__c.field-meta.xml
<CustomField>
    <fullName>Enable_Inventory_management__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable Inventory management</label>
    <type>Checkbox</type>
</CustomField>