force-app/main/default/objects/Product__c/fields/Enable_Serialized_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Enable_Serialized_Inventory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Serialized Inventory</label>
    <type>Checkbox</type>
</CustomField>