force-app/main/default/objects/Product__c/fields/Serialization_Control_Point__c.field-meta.xml
<CustomField>
    <fullName>Serialization_Control_Point__c</fullName>
    <defaultValue>&quot;At Stock In&quot;</defaultValue>
    <label>Serialization Control Point</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Enable_Serialized_Inventory__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>At Stock In</fullName>
                <default>true</default>
                <label>At Stock In</label>
            </value>
            <value>
                <fullName>At Stock Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>