force-app/main/default/objects/Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Enable_Inventory_management__c</columns>
    <columns>Enable_Serialized_Inventory__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>